test/fail/non-theorems/Issue23/18-9472-neut.fof
%-----------------------------------------------------------------------------
% This file was automatically generated by Apia.
%-----------------------------------------------------------------------------

%-----------------------------------------------------------------------------
% The conjecture.

% The Agda term was:
% Name: Issue23.─-neut
% Role: prove
% Line: 18
fof(n24_2685234008821419018, conjecture, ( ! [A] : (n_45__10_2685234008821419018(r0_4_2685234008821419018,A) = n45__8_2685234008821419018(A)) )).

% End conjecture.

%-----------------------------------------------------------------------------
% End TPTP file.
